--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@
  * in the user manual at https://docs.gradle.org/5.6.3/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'Lunar Rail'
+rootProject.name = 'Lunar Core'
