(misc) Create a GitHub Action for building the server JAR

--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,9 @@ configurations.all {
 }
 
 clean {
-    delete protobuf.generatedFilesBaseDir
+    if (shouldGenerateProto) {
+        delete protobuf.generatedFilesBaseDir
+    }
 }
 
 application {
